Using the model registry is now optional

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,11 @@
 FLASK_APP=tno.etm_price_profile_adapter.main:app
 FLASK_RUN_PORT=9201
 
-MINIO_ENDPOINT=localhost:9000
-MINIO_SECURE=False
-MINIO_ACCESS_KEY=admin
-MINIO_SECRET_KEY=password
+# Uncomment and/change the following lines if you're working with Minio as the Intermediate Model Storage solution
+# MINIO_ENDPOINT=localhost:9000
+# MINIO_SECURE=False
+# MINIO_ACCESS_KEY=admin
+# MINIO_SECRET_KEY=password
+
+# Uncomment and/change the following line if you're working with the Model Registry
+# REGISTRY_ENDPOINT=http://localhost:9200/registry/
