Using Registry by Default

--- a/.env.docker
+++ b/.env.docker
@@ -13,3 +13,6 @@ MINIO_ENDPOINT=minio:9000
 MINIO_SECURE=False
 MINIO_ACCESS_KEY=admin
 MINIO_SECRET_KEY=password
+
+# Registry
+REGISTRY_ENDPOINT=http://mmvib-registry:9200/registry/
